[CLEANUP] Fixed horizontal scrolling issue with long latex LRN-6116

--- a/src/css/textarea.less
+++ b/src/css/textarea.less
@@ -23,5 +23,6 @@
 
     width: 1px; // don't "stick out" invisibly from a math field,
     height: 1px; // can affect ancestor's .scroll{Width,Height}
+    word-wrap: break-word;
   }
 }
